Revision history for JSON-Schema-Modern

{{$NEXT}}

0.563     2023-02-04 23:38:13Z
          - documentation update: improve language around data types and
            JSON decoder recommendations

0.562     2023-01-22 00:49:07Z
          - bump a test prereq to fix a mismatched exception message

0.561     2023-01-07 20:57:37Z
          - further tweak performance by only collecting annotations when
            explicitly requested, or needed by the current evaluation scope

0.560     2022-12-20 20:00:05Z
          - fix a test that depended on optional prereqs

0.559     2022-12-16 04:29:55Z
          - fix regression where formats do not validate beyond a $ref (since
            v0.556)

0.558     2022-11-26 02:43:15Z
          - add fallback media type handling for text/*
          - performance is (hopefully) improved by delaying some calculations
            in annotations until they are needed

0.557     2022-10-30 21:59:04Z
          - improvements to processing of keywords in the Content vocabulary
            (contentEncoding, contentMediaType, contentSchema)
          - LICENSE now provided with bundled metaschema files

0.556     2022-09-18 22:41:50Z
          - some performance optimizations for schema traversal and evaluation

0.555     2022-09-10 21:43:11Z
          - the "iri-reference" format is now supported, sort of (all strings
            will be accepted as valid)
          - "enum" no longer incorrectly errors if elements are not unique
          - new experimental output format: "data_only", which encapsulates
            what is produced when a JSON::Schema::Modern::Result object is
            stringified

0.554     2022-07-24 00:08:54Z
          - use new Slurpy type in Types::Standard

0.553     2022-06-25 03:27:14Z
          - expanded on the documentation for serializing results.
          - updated IETF URI references from draft-bhutton-json-schema-00
            to draft-bhutton-json-schema-01, to reflect the updates to